@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-08T08:13:43Z",
+  "timestamp" : "2022-07-09T16:11:05Z",
   "count_outdated" : 424,
   "uniques_outdated" : 30,
-  "count" : 430,
-  "uniques" : 32,
+  "count" : 434,
+  "uniques" : 33,
   "views" : [
     {
       "timestamp": "2022-06-28T00:00:00Z",
@@ -16,6 +16,13 @@
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-09T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
