@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 1,
+  "count": 10,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2022-06-28T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-09T00:00:00Z",
+      "count": 4,
       "uniques": 1
     }
   ]
